fixed spacing in menu

--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,7 @@ Primary style
   box-sizing: border-box;
 }
 
-*::after, *::before {
-  content: '';
-}
+
 
 body {
   font-size: 100%;
